--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.13.4",
     "@astrojs/check": "^0.9.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/outfit": "^5.0.13",
+    "astro": "^4.13.4",
+    "qrcodejs": "^1.0.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/qrcodejs": "^1.0.4"
   }
 }
